examples/stress-test/errors/bad-arity.mds
@define greet(name):
Hello {name}!
@end

{greet("Alice", "extra_arg")}
